--- a/config.ini
+++ b/config.ini
@@ -23,7 +23,7 @@ fft-win-size = 512
 
 [train]
 ; The csv file produced in the data preparation stage
-data-csv = data.csv
+data-csv = training_output/data.csv
 ; Number of times to duplicate the positive data items
 pos-data-duplication = 5
 ; Number of times to duplicate the negative data items
@@ -39,14 +39,14 @@ lr = 0.0002
 ; The path to the pre-trained model
 base-model = 
 ; The path to the trained (result) model
-trained-model = ./training/model.pth
+trained-model = ./training_output/models/model.pth
 ; Whether to save the image patches fed into the NN for the first epoch
 ; This is useful for diagnosing problems. Max saved images is 200.
 save-image-patches = true
 
 dataset-log = 
 ; The path to the training log file
-log = log_train.txt
+log = training_output/log_train.txt
 
 
 ; ---------------------
@@ -58,7 +58,7 @@ log = log_train.txt
 ; This is the hop size in seconds - how far along the spectrogram we advance at each each step  
 hop = 0.5
 ; The NN model being used for inference 
-model = ./training/model.pth
+model = ./training_output/models/model.pth
 ; The species name which will be included in the Raven file
 species-name = Species 1
 ; The wav file to process
@@ -73,7 +73,7 @@ image-dir = ./inference/detection_patches
 ; when there are detections within a file
 max-file-images = 4
 ; The directory to store the Raven output files in
-output-dir = ./inference
+output-dir = ./inference_output
 ; The path to the inference log file
 log = ./log.txt
 
