Tidied up folder structure - all training output to single folder, with subdirectories (by default, editable in config.ini) - all inference output to single folder, with subdirectories - output folders are generated automatically if they don't exist - models to be shipped are in a new "models" directory, models that are generated are under training_ouput - sample datasets folder renamed
closes #2

--- a/config.ini
+++ b/config.ini
@@ -64,17 +64,17 @@ species-name = Species 1
 ; The wav file to process
 wav-file = 
 ; The wav directory to process
-wav-dir = ./data/test
+wav-dir = ./sample_data/test
 ; Whether to process files recursively
 recursive = true
 ; The directory to store image pathces of detections
-image-dir = ./inference/detection_patches
+image-dir = ./inference_output/detection_patches
 ; This is the maximum number of image patches per wav file that we will save to disk
 ; when there are detections within a file
 max-file-images = 4
 ; The directory to store the Raven output files in
 output-dir = ./inference_output
 ; The path to the inference log file
-log = ./log.txt
+log = ./inference_output/log.txt
 
 
