Fixes relating to dataset construction and error messages.

--- a/config.ini
+++ b/config.ini
@@ -23,31 +23,26 @@ fft-win-size = 512
 
 [train]
 ; The csv file produced in the data preparation stage
-data-csv = training_output/data.csv
-; Number of times to duplicate the positive data items
-pos-data-duplication = 5
-; Number of times to duplicate the negative data items
-neg-data-duplication = 5
+data-csv = data.csv
 ; The size of the test set
-test-set-size = 12
+test-set-size = 24
 ; Number of training epochs
-epochs = 20
-; The batch size
-batch-size = 24
+epochs = 10
+; The batch size - should be less than the test set size
+batch-size = 4
 ; The learning rate
-lr = 0.0002
+lr = 0.001
 ; The path to the pre-trained model
 base-model = 
 ; The path to the trained (result) model
-trained-model = ./training_output/models/model.pth
+trained-model = ./training/model.pth
 ; Whether to save the image patches fed into the NN for the first epoch
 ; This is useful for diagnosing problems. Max saved images is 200.
 save-image-patches = true
-
-dataset-log = 
 ; The path to the training log file
-log = training_output/log_train.txt
-
+log = log_train.txt
+; A random seed for the construction of the train-test split
+random-seed = 8
 
 ; ---------------------
 ; Inference parameters
@@ -58,23 +53,23 @@ log = training_output/log_train.txt
 ; This is the hop size in seconds - how far along the spectrogram we advance at each each step  
 hop = 0.5
 ; The NN model being used for inference 
-model = ./training_output/models/model.pth
+model = ./training/model.pth
 ; The species name which will be included in the Raven file
 species-name = Species 1
 ; The wav file to process
 wav-file = 
 ; The wav directory to process
-wav-dir = ./sample_data/test
+wav-dir = ./data/test
 ; Whether to process files recursively
 recursive = true
 ; The directory to store image pathces of detections
-image-dir = ./inference_output/detection_patches
+image-dir = ./inference/detection_patches
 ; This is the maximum number of image patches per wav file that we will save to disk
 ; when there are detections within a file
 max-file-images = 4
 ; The directory to store the Raven output files in
-output-dir = ./inference_output
+output-dir = ./inference
 ; The path to the inference log file
-log = ./inference_output/log.txt
+log = ./log.txt
 
 
