--- a/config.ini
+++ b/config.ini
@@ -23,7 +23,7 @@ fft-win-size = 512
 
 [train]
 ; The csv file produced in the data preparation stage
-data-csv = data.csv
+data-csv = training_output/data.csv
 ; The size of the test set
 test-set-size = 24
 ; Number of training epochs
@@ -35,12 +35,12 @@ lr = 0.001
 ; The path to the pre-trained model
 base-model = 
 ; The path to the trained (result) model
-trained-model = ./training/model.pth
+trained-model = ./training_output/models/model.pth
 ; Whether to save the image patches fed into the NN for the first epoch
 ; This is useful for diagnosing problems. Max saved images is 200.
 save-image-patches = true
 ; The path to the training log file
-log = log_train.txt
+log = training_output/log_train.txt
 ; A random seed for the construction of the train-test split
 random-seed = 8
 
@@ -53,23 +53,23 @@ random-seed = 8
 ; This is the hop size in seconds - how far along the spectrogram we advance at each each step  
 hop = 0.5
 ; The NN model being used for inference 
-model = ./training/model.pth
+model = ./training_output/models/model.pth
 ; The species name which will be included in the Raven file
 species-name = Species 1
 ; The wav file to process
 wav-file = 
 ; The wav directory to process
-wav-dir = ./data/test
+wav-dir = ./sample_data/test
 ; Whether to process files recursively
 recursive = true
 ; The directory to store image pathces of detections
-image-dir = ./inference/detection_patches
+image-dir = ./inference_output/detection_patches
 ; This is the maximum number of image patches per wav file that we will save to disk
 ; when there are detections within a file
 max-file-images = 4
 ; The directory to store the Raven output files in
-output-dir = ./inference
+output-dir = ./inference_output
 ; The path to the inference log file
-log = ./log.txt
+log = ./inference_output/log.txt
 
 
