--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,23 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "cwd": "tests"
-        }
+        },
+        {
+            "name": "Python: run everything",
+            "type": "python",
+            "request": "launch",
+            "program": "src/workshop.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": ["--pos",
+                     "/Users/eichinsp/Library/CloudStorage/OneDrive-QueenslandUniversityofTechnology/plains_wanderer/audio/labelled/sorted/pos",
+                     "--neg",
+                     "/Users/eichinsp/Library/CloudStorage/OneDrive-QueenslandUniversityofTechnology/plains_wanderer/audio/labelled/sorted/neg",
+                     "--config",
+                     "config_pw.ini",
+                     "--specs",
+                     "./training_output/preparation/pw/005/specs"
+                 ]
+        },
     ]
 }
