moved inference path from config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,6 +28,8 @@
                      "config_pw.ini",
                      "--specs",
                      "./training_output/preparation/pw/005/specs"
+                     "--wav-dir",
+                    "/Users/eichinsp/Library/CloudStorage/OneDrive-QueenslandUniversityofTechnology/plains_wanderer/audio/labelled/sorted",
                  ]
         },
     ]
