removed unused files

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ sample_data/*/unlabelled/*
 
 # inference audio files are too big. The tutorial instructs to download them, and uses this path in the example code
 inference_audio/*
+
+working_files/*
